--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,9 @@
 ACLOCAL_AMFLAGS = -I m4 --install
 AUTOMAKE_OPTIONS = foreign
-SUBDIRS = src
 EXTRA_DIST = bootstrap LICENSE README.md
+SUBDIRS = src test
+doc_DATA = README.md
+
+main: all
+	@echo "------------ build done ----------"
+	./src/aincrad
